--- a/JavaPrep/startbootstrap-clean-blog-gh-pages/about.html
+++ b/JavaPrep/startbootstrap-clean-blog-gh-pages/about.html
@@ -68,7 +68,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Work in progress</p>
+        <p>JavaPrep</p>
       </div>
     </div>
   </div>
